--- a/src/style.css
+++ b/src/style.css
@@ -1,21 +1,53 @@
 body {
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: Arial, sans-serif;
 }
 .weather-app {
 	border: 1px solid #DADCE0;
-	margin: 30px auto;
 	padding: 20px;
 	border-radius: 5px;
+	
+}
+.weather-app-wrap {
 	max-width: 600px;
+	margin: 30px auto;
 }
 ul {
-	color: #7E8387;
-	list-style: none;
+	padding: 0;
+	margin: 0;
 }
-.weather-icon {
-	display: inline-block;
-    height: 60px;
+li {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	color: #70757a;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+h1 {
+	color: #202124;
+    font-size: 22px;
+    line-height: 26px;
+	margin-bottom: 0;
+}
+.weather-temperature img{
+	height: 64px;
     margin-top: unset;
     vertical-align: top;
-    width: 60px;
+    width: 64px;
+	
+}
+.weather-temperature strong{
+	font-size: 48px;
+	font-weight: normal;
+	columns: #202124;
+	line-height: 1;
+}
+.upperside {
+	margin-bottom: 20px;
+}
+.weather-temperature .units {
+	position: relative;
+	font-size: 16px;
+	top: -24px;
 }
