--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@ h1 {
 	
 }
 .weather-temperature strong{
+	display: inline-block;
 	font-size: 48px;
 	font-weight: normal;
 	columns: #202124;
@@ -47,6 +48,7 @@ h1 {
 	margin-bottom: 20px;
 }
 .weather-temperature .units {
+	display: inline-block;
 	position: relative;
 	font-size: 16px;
 	top: -24px;
